--- a/config.yaml
+++ b/config.yaml
@@ -6,6 +6,12 @@ datasets:
       - type: zipfile
         url: https://dl.dropboxusercontent.com/s/a0ruo3e2cdoh1dr/pillowbook-ru.zip
     models:
+      - name: pillowbook-ru-3-512
+        params:
+          rnn_size: 256
+          num_layers: 3
+          num_epochs: 2500
+          save_every: 500
       - name: pillowbook-ru-3-256
         params:
           rnn_size: 256
@@ -43,6 +49,42 @@ datasets:
         source:
           type: zipfile
           url: https://dl.dropboxusercontent.com/s/eflqros14y9gb1o/mcdonagh-ru-3-512.zip
+
+  - name: brodsky-ru
+    sources:
+      - type: zipfile
+        url: https://dl.dropboxusercontent.com/s/du0old8mfb4b7bm/brodsky-ru.zip
+    models:
+      - name: brodsky-ru-3-512
+        params:
+          rnn_size: 512
+          num_layers: 3
+          num_epochs: 100
+          save_every: 500
+
+  - name: kafka-ru
+    sources:
+      - type: zipfile
+        url: https://dl.dropboxusercontent.com/s/awvv1glcqk8q0wi/kafka-ru.zip
+    models:
+      - name: kafka-ru-3-512
+        params:
+          rnn_size: 512
+          num_layers: 3
+          num_epochs: 100
+          save_every: 500
+
+  - name: tinyshakespeare-ru
+    sources:
+      - type: zipfile
+        url: https://dl.dropboxusercontent.com/s/h4c5labgvu2qjbb/tinyshakespeare-ru.zip
+    models:
+      - name: tinyshakespeare-ru-3-256
+        params:
+          rnn_size: 512
+          num_layers: 3
+          num_epochs: 100
+          save_every: 500
 
   - name: constitution-ukraine-ua
     sources:
