--- a/config.yaml
+++ b/config.yaml
@@ -99,7 +99,7 @@ datasets:
       - type: zipfile
         url: https://dl.dropboxusercontent.com/s/ou4t65ytnbjdh2b/tinyshakespeare-ru.zip
     models:
-      - name: tinyshakespeare-ru-3-256
+      - name: tinyshakespeare-ru-3-512
         params:
           rnn_size: 512
           num_layers: 3
@@ -143,6 +143,15 @@ dirs:
 
 server:
   reload_model: 300
-  reload_text: 30
+  reload_text: 5
+  port: 8080
   dataset: mcdonagh-ru
   model: mcdonagh-ru-3-512
+  samples_order: normal
+  model_urls:
+    - tinyshakespeare-ru/tinyshakespeare-ru-3-512
+    - pillowbook-ru/pillowbook-ru-3-512
+    - brodsky-ru/brodsky-ru-3-512
+    - kafka-ru/kafka-ru-3-512
+    - aeneid-mixed-ru/aeneid-mixed-ru-3-512
+    - mcdonagh-ru/mcdonagh-ru-3-512
