--- a/config.yaml
+++ b/config.yaml
@@ -136,6 +136,30 @@ datasets:
       - type: zipfile
         url: https://dl.dropboxusercontent.com/s/4egkoglgox8v6jj/tax-codex-ukraine-ua.zip
 
+  - name: aragon-ru
+    sources:
+      - type: zipfile
+        url: https://dl.dropboxusercontent.com/s/3andrm02ofbuwbq/aragon-ru.zip
+    models:
+      - name: aragon-ru-3-512
+        params:
+          rnn_size: 512
+          num_layers: 3
+          num_epochs: 150
+          save_every: 500
+
+  - name: oberiu-ru
+    sources:
+      - type: zipfile
+        url: https://dl.dropboxusercontent.com/s/v7tpus181oh3ear/oberiu-ru.zip
+    models:
+      - name: oberiu-ru-3-512
+        params:
+          rnn_size: 512
+          num_layers: 3
+          num_epochs: 150
+          save_every: 500
+
 dirs:
   data: ./data
   models: ./save
