Add oberiu model

--- a/config.yaml
+++ b/config.yaml
@@ -200,3 +200,4 @@ server:
     - kafka-ru/kafka-ru-3-512
     - aeneid-mixed-ua/aeneid-mixed-ua-3-512
     - mcdonagh-ru/mcdonagh-ru-3-512
+    - oberiu-ru/oberiu-ru-3-512
