Serve aron's model.

--- a/config.yaml
+++ b/config.yaml
@@ -204,3 +204,4 @@ server:
     - aeneid-mixed-ua/aeneid-mixed-ua-3-512
     - mcdonagh-ru/mcdonagh-ru-3-512
     - oberiu-ru/oberiu-ru-3-512
+    - aragon-ru/aragon-ru-3-512
