--- a/config.yaml
+++ b/config.yaml
@@ -171,16 +171,19 @@ datasets:
       - type: zipfile
         url: https://dl.dropboxusercontent.com/s/vbdxfcyhvih42jv/vvedensky-ru.zip
     models:
-      - name: vvedensky-ru-2-128
-        params:
-          rnn_size: 128
-          num_layers: 2
-          num_epochs: 2500
-          save_every: 500
       - name: vvedensky-ru-3-512
         params:
           rnn_size: 512
           num_layers: 3
+          num_epochs: 2500
+          save_every: 500
+        source:
+          type: zipfile
+          url: https://dl.dropboxusercontent.com/s/19rbsg1q96ncv5h/vvedensky-ru-3-512.zip
+      - name: vvedensky-ru-2-128
+        params:
+          rnn_size: 128
+          num_layers: 2
           num_epochs: 2500
           save_every: 500
 
